upgrade smart-servlet to 0.6-SNAPSHOT